# ros2_motion_planning_tp2

./: .gitignore  2Documentação - Trabalho Prático 2 - Planejamento de Movimento de Robôs.docx  README.md  leiame.txt
src/ld90_gz/: package.xml  setup.cfg  setup.py
src/ld90_gz/config/: bridge.yaml
src/ld90_gz/gui/: tp2_top_view.config
src/ld90_gz/launch/: sim_ld90.launch.py  tp2_q1_astar_map1.launch.py  tp2_q1_astar_map2.launch.py  tp2_q2_gvd_map1.launch.py  tp2_q2_gvd_map2.launch.py  tp2_q3_rrt_map1.launch.py  tp2_q3_rrt_map2.launch.py
src/ld90_gz/ld90_gz/: astar_planner.py  brushfire_gvd.py  fl_controller.py  grid_map.py  path_follower.py  potential_fields_follower.py  rrt_planner.py
src/ld90_gz/models/: ld90_gz.sdf  ld90_gz1.sdf  ld90_gz2.sdf
src/ld90_gz/obstacles/0.5m_pilar/: model.config  model.sdf
src/ld90_gz/obstacles/10m_wall/: model.config  model.sdf
src/ld90_gz/obstacles/1m_pilar/: model.config  model.sdf
src/ld90_gz/obstacles/20m_wall/: model.config  model.sdf
src/ld90_gz/obstacles/2m_wall/: model.config  model.sdf
src/ld90_gz/obstacles/50m_wall/: model.config  model.sdf
src/ld90_gz/obstacles/5m_wall/: model.config  model.sdf
src/ld90_gz/urdf/: ld90_gz.urdf.xacro
src/ld90_gz/worlds/: empty.sdf  tp2_map1.sdf  tp2_map2.sdf  tp2_scene_1.sdf  tp2_scene_2.sdf
src/omron_amr/amr_core/: CMakeLists.txt  package.xml
src/omron_amr/amr_core/include/amr_core/: core_node.hpp
src/omron_amr/amr_core/src/: core_node.cpp
src/omron_amr/libaria/: .gitignore  Aria-Reference.html  CMakeLists.txt  Changelog  CommandLineOptions.txt  README.md  doxygen.conf  package.xml  version.txt
src/omron_amr/libaria/ArNetworking/: CommandLineOptions.txt  doxygen.conf
src/omron_amr/libaria/ArNetworking/docs/: RemoteRequestAPI.dox
src/omron_amr/libaria/ArNetworking/examples/: changeMapOnServer.cpp  clientCommandLister.cpp  clientDemo.cpp  clientStringInfoExample.cpp  configClient.cpp  configClientToServer.cpp  configServer.cpp  configServerRobot.cpp  drawingsExample.cpp  drawingsExampleWithRobot.cpp  getVideoExample.cpp  popupExample.cpp  ptzCameraClientExample.cpp  robotUpdateExample.cpp  serverDemo.cpp  simpleServerExample.cpp
src/omron_amr/libaria/ArNetworking/include/: ArCentralForwarder.h  ArCentralManager.h  ArClientArgUtils.h  ArClientBase.h  ArClientData.h  ArClientFileUtils.h  ArClientHandlerConfig.h  ArClientHandlerRobotUpdate.h  ArClientRatioDrive.h  ArClientSimpleConnector.h  ArClientSwitchManager.h  ArHybridForwarderVideo.h  ArMapChanger.h  ArNetPacket.h  ArNetPacketReceiverTcp.h  ArNetPacketSenderTcp.h  ArServerBase.h  ArServerClientData.h  ArServerData.h  ArServerFileUtils.h  ArServerHandlerCamera.h  ArServerHandlerCameraCollection.h  ArServerHandlerCommMonitor.h  ArServerHandlerCommands.h  ArServerHandlerConfig.h  ArServerHandlerMap.h  ArServerHandlerMapping.h  ArServerHandlerPopup.h  ArServerInfoDrawings.h  ArServerInfoRobot.h  ArServerInfoSensor.h  ArServerInfoStrings.h  ArServerMode.h  ArServerModeDrive.h  ArServerModeIdle.h  ArServerModeJogPosition.h  ArServerModeRatioDrive.h  ArServerModeStop.h  ArServerModeWander.h  ArServerSimpleCommands.h  (+4 more)
src/omron_amr/libaria/ArNetworking/matlab/: arnetc_init.cpp  arnetc_shutdown.cpp
src/omron_amr/libaria/ArNetworking/src/: ArCentralForwarder.cpp  ArCentralManager.cpp  ArClientArgUtils.cpp  ArClientBase.cpp  ArClientData.cpp  ArClientFileUtils.cpp  ArClientHandlerConfig.cpp  ArClientHandlerRobotUpdate.cpp  ArClientRatioDrive.cpp  ArClientSimpleConnector.cpp  ArClientSwitchManager.cpp  ArHybridForwarderVideo.cpp  ArMapChanger.cpp  ArNetPacket.cpp  ArNetPacketReceiverTcp.cpp  ArNetPacketReceiverUdp.cpp  ArNetPacketSenderTcp.cpp  ArServerBase.cpp  ArServerClient.cpp  ArServerData.cpp  ArServerFileUtils.cpp  ArServerHandlerCamera.cpp  ArServerHandlerCameraCollection.cpp  ArServerHandlerCommMonitor.cpp  ArServerHandlerCommands.cpp  ArServerHandlerConfig.cpp  ArServerHandlerMap.cpp  ArServerHandlerMapping.cpp  ArServerHandlerPopup.cpp  ArServerInfoDrawings.cpp  ArServerInfoRobot.cpp  ArServerInfoSensor.cpp  ArServerInfoStrings.cpp  ArServerMode.cpp  ArServerModeDrive.cpp  ArServerModeIdle.cpp  ArServerModeJogPosition.cpp  ArServerModeRatioDrive.cpp  ArServerModeStop.cpp  ArServerModeWander.cpp  (+4 more)
src/omron_amr/libaria/ArNetworking/tests/: baseTest.cpp  bytesIntoAndOutOfPackets.cpp  cameraModeClient.cpp  clientLoadMap.cpp  clientLocalizeToPose.cpp  clientPatrol.cpp  commandTestClient.cpp  commandTestServer.cpp  fileClient.cpp  fileClientRaw.cpp  fileServer.cpp  fileToServer.cpp  idleClient.cpp  infoDrawingClient.cpp  infoDrawingServer.cpp  mapClient.cpp  mapServer.cpp  modeInfoClient.cpp  reloadConfig.cpp  simpleServerTest.cpp  standaloneClientDemo.cpp  standaloneServerDemo.cpp  switchServer.cpp  switchWatcher.cpp  testClient.cpp  (+4 more)
src/omron_amr/libaria/cmake/: libariaConfig.cmake.in
src/omron_amr/libaria/docs/: README_old.md  cli.md  current_interfaces.md  tests_examples.md
src/omron_amr/libaria/src/: ArACTS.cpp  ArAMPTU.cpp  ArASyncTask.cpp  ArAction.cpp  ArActionAvoidFront.cpp  ArActionAvoidSide.cpp  ArActionBumpers.cpp  ArActionColorFollow.cpp  ArActionConstantVelocity.cpp  ArActionDeceleratingLimiter.cpp  ArActionDesired.cpp  ArActionDriveDistance.cpp  ArActionGoto.cpp  ArActionGotoStraight.cpp  ArActionGroup.cpp  ArActionGroups.cpp  ArActionIRs.cpp  ArActionInput.cpp  ArActionJoydrive.cpp  ArActionKeydrive.cpp  ArActionLimiterBackwards.cpp  ArActionLimiterForwards.cpp  ArActionLimiterRot.cpp  ArActionLimiterTableSensor.cpp  ArActionMovementParameters.cpp  ArActionMovementParametersDebugging.cpp  ArActionRatioInput.cpp  ArActionRobotJoydrive.cpp  ArActionStallRecover.cpp  ArActionStop.cpp  ArActionTriangleDriveTo.cpp  ArActionTurn.cpp  ArAnalogGyro.cpp  ArArg.cpp  ArArgumentBuilder.cpp  ArArgumentParser.cpp  ArBasePacket.cpp  ArBatteryConnector.cpp  ArBatteryMTX.cpp  ArBumpers.cpp  (+121 more)
src/omron_amr/libaria/tests/: actionAverageTest.cpp  angleBetweenTest.cpp  libariaHardwareTestRunner.cpp  libariaSafeTestRunner.cpp  lineTest.cpp  robotListTest.cpp
src/omron_amr/libaria/tools/: omron_robot_cli.cpp
(+71 files in other folders)
